--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <p>You're in the jungle, baby...</p>
 
   <a href="/about.html">about</a>
+  <a href="/form.html">form</a>
 
   <script src='script.js'></script>
 </body>
